# book-gpt

./: .gitignore  README.md  check.py  create_prompt.py  join_summary.py  pyproject.toml  read_pdf.py  read_pdf_for_horizontal.py  requirements.txt  search_split_point_candidate.py  settings.py  summary_all.py  summary_at_once.py  tmp.py
.devcontainer/: devcontainer.json
