[tool.poetry]
name = "book-gpt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
pandas = "^2.2.0"
pymupdf = "^1.23.18"
openai = "^1.9.0"
python-docx = "^1.1.0"
matplotlib = "^3.8.2"
scipy = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
