[tool.poetry]
name = "book-gpt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
pandas = "^2.2.0"
pymupdf = "^1.23.18"
python-docx = "^1.1.0"
matplotlib = "^3.8.2"
scipy = "^1.12.0"
pyarrow = "^15.0.0"
boto3 = "^1.35.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
